force-app/main/default/objects/RoletaLeads__c/RoletaLeads__c.object-meta.xml
<CustomObject>
    <description>Responsável pela distribuição de leads por equipe de vendas.</description>
    <label>Roleta de leads</label>
    <nameField>
        <label>Nome da roleta de leads</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roletas de leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>