force-app/main/default/objects/RoletaLeads__c/fields/Ativa__c.field-meta.xml
<CustomField>
    <fullName>Ativa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativa?</label>
    <type>Checkbox</type>
</CustomField>