force-app/main/default/objects/RoletaLeads__c/fields/Coordenador__c.field-meta.xml
<CustomField>
    <fullName>Coordenador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordenador</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>User.Coordenador__r.Title</field>
            <operation>notEqual</operation>
            <value>COORD ONLINE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Roletas_de_leads</relationshipName>
    <type>Lookup</type>
</CustomField>