force-app/main/default/objects/RoletaLeads__c/fields/DiasSemana__c.field-meta.xml
<CustomField>
    <fullName>DiasSemana__c</fullName>
    <description>Indica em quais dias da semana podem ser realizadas distribuições de lead para a
        roleta</description>
    <inlineHelpText>Selecione os dias da semana para a distribuição de leads na roleta.</inlineHelpText>
    <label>Dias da semana</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DiasSemana</valueSetName>
    </valueSet>
</CustomField>