force-app/main/default/objects/RoletaLeads__c/fields/Equipe__c.field-meta.xml
<CustomField>
    <fullName>Equipe__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Indica a equipe responsável pelo atendimento dos leads distribuídos para a roleta.</description>
    <label>Equipe</label>
    <referenceTo>Equipe__c</referenceTo>
    <relationshipName>RoletasLeads</relationshipName>
    <type>Lookup</type>
</CustomField>