force-app/main/default/objects/RoletaLeads__c/fields/HoraFim__c.field-meta.xml
<CustomField>
    <fullName>HoraFim__c</fullName>
    <description>Indica o horário de término das distribuições de lead para a roleta.</description>
    <label>Hora de fim</label>
    <type>Time</type>
</CustomField>