force-app/main/default/objects/RoletaLeads__c/fields/HoraInicio__c.field-meta.xml
<CustomField>
    <fullName>HoraInicio__c</fullName>
    <description>Indica o horário de início para as distribuições de lead para a roleta.</description>
    <label>Hora de início</label>
    <type>Time</type>
</CustomField>