force-app/main/default/objects/RoletaLeads__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Equipe__c</columns>
    <columns>Ativa__c</columns>
    <columns>DentroHorarioFuncionamento__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>