force-app/main/default/objects/RoletaLeads__c/listViews/RoletasCoordenador.listView-meta.xml
<ListView>
    <fullName>RoletasCoordenador</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Coordenador__c</field>
        <operation>equals</operation>
        <value>$USER</value>
    </filters>
    <label>Minhas Roletas</label>
    <sharedTo>
        <portalRoleAndSubordinates>YOUVENDASExecutivodeParceiro</portalRoleAndSubordinates>
    </sharedTo>
</ListView>